<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zd.mynewsapp.profile.UserProfileActivity">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginTop="@dimen/profile_first_name_margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_second_name_margin_top"
        android:hint="@string/second_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/shown_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_email_margin_top"
        android:clickable="false"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@+id/second_name"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_phone_number_margin_top"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/shown_email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_date_of_birth_margin_top"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="@dimen/save_button_width"
        android:layout_height="@dimen/save_button_height"
        android:layout_marginTop="@dimen/profile_edit_button_margin_top"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="@dimen/edit_button_width"
        android:layout_height="@dimen/edit_button_height"
        android:layout_marginTop="@dimen/profile_save_button_margin_top"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"/>

</androidx.constraintlayout.widget.ConstraintLayout>